--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - ccache -s
   - export PATH=/usr/lib/ccache:${PATH}
   - pip install --upgrade pip
+  - pip install future
   - pip install pytest-cov codecov
 install:
   - python setup.py develop
