travis: try to get python and lcov reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,5 @@ after_success:
   - lcov --capture --directory . --output-file coverage.info
   - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter system-files
   - lcov --list coverage.info
-  # Uploading to CodeCov
-  - bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+  # Uploading to CodeCov but excluding gcov reports
+  - bash <(curl -s https://codecov.io/bash) -f "!*.gcov" || echo "Codecov did not collect coverage reports"
