--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include *.txt
 include *.rst
 include *.md
 include Makefile
+include LICENSE
 recursive-include docs *.rst
 recursive-include docs *.png
 recursive-include docs *.py
