--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include *.rst
 include *.md
 include Makefile
 include LICENSE
+recursive-include tests
 recursive-include docs *.rst
 recursive-include docs *.png
 recursive-include docs *.py
