--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,6 @@ env:
   - CPPFLAGS=--coverage
 jobs:
   include:
-  - name: "run test suite with python 2.7"
-    python: 2.7
-    dist: trusty
-  - name: "run test suite with python 3.4"
-    python: 3.4
-    dist: trusty
   - name: "run test suite with python 3.5"
     python: 3.5
     dist: trusty
@@ -34,7 +28,8 @@ jobs:
 
 before_install:
   - pip install --upgrade pip
-  - pip install pytest-cov codecov
+  - pip install pytest-cov
+  - pip install https://github.com/nucleic/cppy/tarball/nucleic-migration
 install:
   - python setup.py develop
 script:
