--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Continuous Integration
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+    - master
 
 jobs:
   tests:
@@ -46,6 +49,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
       - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install https://github.com/nucleic/cppy/tarball/master
+      - name: Install project
+        run: |
+          python setup.py develop
+      - name: Install doc building tools
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme
