--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,11 @@ jobs:
         run: |
           python setup.py develop
       - name: Install doc building tools
+        uses: kamiazya/setup-graphviz@v1
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme
-      - name:
+      - name: Build documentation
         run: |
           mkdir docs_output;
           sphinx-build docs/source docs_output -W -b html;
