--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,17 @@ jobs:
           pytest tests --cov atom --cov-report xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+        if: ${{ runner.os }} == "Windows"
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          yml: ./codecov.yml
+          fail_ci_if_error: true
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        if: ${{ runner.os }} != "Windows"
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
