--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,17 @@
 name: Continuous Integration
 on:
+  schedule:
+    - cron: '0 0 * * 2'
   push:
     branches:
-    - master
+      - master
   pull_request:
     branches:
-    - master
+      - master
+    paths:
+      - atom/*
+      - tests/*
+      - setup.py
 
 jobs:
   tests:
@@ -53,28 +59,3 @@ jobs:
           name: codecov-umbrella
           yml: ./codecov.yml
           fail_ci_if_error: true
-
-  docs:
-    name: Docs building
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v1
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/master
-      - name: Install project
-        run: |
-          python setup.py develop
-      - name: Install graphviz
-        uses: kamiazya/setup-graphviz@v1
-      - name: Install doc building tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme
-      - name: Build documentation
-        run: |
-          mkdir docs_output;
-          sphinx-build docs/source docs_output -W -b html;
