--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - master
     paths:
+      - .github/workflows/docs.yml
       - atom/*
       - tests/*
       - setup.py
