--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,7 +11,7 @@ on:
     paths:
       - .github/workflows/docs.yml
       - atom/*
-      - tests/*
+      - docs/*
       - setup.py
 
 jobs:
@@ -33,7 +33,6 @@ jobs:
         uses: kamiazya/setup-graphviz@v1
       - name: Install doc building tools
         run: |
-          python -m pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme
       - name: Build documentation
         run: |
