--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,15 @@ jobs:
         run: |
           python setup.py develop
       - name: Test with pytest
+        if: matrix.python-version == '3.6'
         run: |
           pip install pytest-cov
-          pytest tests --cov atom --cov-report xml
+          python -m pytest tests --cov atom --cov-report xml
+      - name: Test with pytest
+        if: matrix.python-version != '3.6'
+        run: |
+          pip install pytest-cov
+          python -X dev -m pytest tests --cov atom --cov-report xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         if: matrix.os == 'windows-latest'
