--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,12 @@ jobs:
         if: matrix.python-version == '3.6'
         run: |
           pip install pytest-cov
-          python -m pytest tests --cov atom --cov-report xml
+          python -m pytest tests --cov atom --cov-report xml -vs
       - name: Test with pytest
         if: matrix.python-version != '3.6'
         run: |
           pip install pytest-cov
-          python -X dev -m pytest tests --cov atom --cov-report xml
+          python -X dev -m pytest tests --cov atom --cov-report xml -v
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         if: matrix.os == 'windows-latest'
