--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,29 @@ on:
       - '*'
 
 jobs:
+  build_sdist:
+    name: Build sdist
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Build sdist
+          python setup.py sdist
+      - name: Test sdist
+        run: |
+          pip install pytest
+          pip install --no-index --find-links dist atom
+          python -m pytest tests
+      - name: Store artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: dist/*
+
   build_wheels:
     name: Build wheels on ${{ matrix.os }} for Python ${{ matrix.python }}
     runs-on: ${{ matrix.os }}
@@ -27,18 +50,22 @@ jobs:
           CIBW_BUILD: cp${{ matrix.python }}-*
         run: |
           cd ..
-          python -m cibuildwheel atom --output-dir ~/wheelhouse
+          python -m cibuildwheel atom --output-dir ~/dist
+      - name: Test wheel
+        run: |
+          pip install pytest
+          pip install --no-index --find-links ~/dist atom
+          python -m pytest tests
       - name: Store artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: wheels
-          path: ~/wheelhouse/*.whl
+          name: artifact
+          path: ~/dist/*.whl
 
   release_upload:
     name: Create Release and Upload Release Asset
     runs-on: ubuntu-latest
-    needs:
-      - build_wheels
+    needs: [build_wheels, build_sdist]
     steps:
       - name: Create Release
         id: create_release
@@ -52,8 +79,8 @@ jobs:
           prerelease: ${{ contains(github.ref, 'rc') || contains(github.ref, 'a') || contains(github.ref, 'b')}}
       - uses: actions/download-artifact@v2
         with:
-          name: wheels
-          path: wheels
+          name: dist
+          path: dist
       - name: Upload Release Asset
         id: upload-release-asset
         uses: shogo82148/actions-upload-release-asset@v1
@@ -61,5 +88,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: wheels/*.whl
-      # Next upload to PyPI
+          asset_path: dist/*
+
+  upload_pypi:
+    needs: [build_wheels, build_sdist]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: ${{ secrets.pypi_username }}
+          password: ${{ secrets.pypi_password }}
+          # To test:
+          repository_url: https://test.pypi.org/legacy/
