--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,19 +48,20 @@ jobs:
           python-version: '3.7'
       - name: Install cibuildwheel
         run: |
-          python -m pip install cibuildwheel
+          python -m pip install --upgrade pip
+          python -m pip install wheel cibuildwheel
       - name: Build wheels
         env:
           CIBW_BUILD: cp${{ matrix.python }}-*
         run: |
           cd ..
           python -m cibuildwheel atom --output-dir ~/dist
+      - name: Verify wheels presence
+        run: |
           cd ~/dist
           ls
       - name: Test wheel
         run: |
-          pip install --upgrade pip
-          pip install wheel
           pip install pytest
           pip install --no-index --find-links=~/dist atom
           cd ..
