--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,21 +38,19 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python: [36, 37, 38, 39]
+        python: [3.6, 3.7, 3.8, 3.9]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: ${{ matrix.python }}
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip
           python -m pip install wheel cibuildwheel
       - name: Build wheels
-        env:
-          CIBW_BUILD: cp${{ matrix.python }}-*
         run: |
           cd ..
           python -m cibuildwheel atom --output-dir ~/dist
