--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,8 @@ jobs:
           CIBW_BUILD: cp${{ matrix.python }}-*
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: python -m pytest {package}/tests -v
+          # Disable FH4 to avoid linking against VC2014_1
+          ATOM_DISABLE_FH4: 1
         run: |
           cd ..
           python -m cibuildwheel atom --output-dir dist
