--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
         run: |
           pip install pytest-cov
           cd ..
-          python -m atom/pytest tests --cov atom --cov-report xml -vs
+          python -m pytest atom/tests --cov atom --cov-report xml -vs
       - name: Test with pytest
         if: matrix.python-version != '3.6'
         run: |
           pip install pytest-cov
           cd ..
-          python -X dev -m atom/pytest tests --cov atom --cov-report xml -v
+          python -X dev -m pytest atom/tests --cov atom --cov-report xml -v
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         if: matrix.os == 'windows-latest'
