--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
           # Disable FH4 to avoid linking against VC2014_1
           ATOM_DISABLE_FH4: 1
         run: |
-          python -m cibuildwheel ./atom --output-dir dist
+          python -m cibuildwheel . --output-dir dist
       - name: Store artifacts
         uses: actions/upload-artifact@v2
         with:
