Automate the release process (#112)
* cis: add release automation

* cis: typo

* cis: typo

* cis: comments

* cis: fix matrix

* cis: build right project

* cis: go to the proper folder

* cis: fix artifact origin

* cis: fix artifact location

* cis: build sdist, test all pacakges and upload to PyPI

* cis: typo

* cis: fix creation of sdist

* cis: typo

* cis: be sure to run against installed version

* cis: typo

* cis: typo again

* cis: debugging

* setup.py: add license classifier

* cis: more debug

* cis: install the python version which we build directly

* cis: test using cibuildwheel instead of trying to reinvent the wheel

* cis: use proper automation to test package wheel

* cis: fix github artifact upload

* cis: avoid using ~ which causes issues on Windows

* setup: allow to avoid building with FH4 on windows

* Update release notes

* cis: fix

* ci: try to get codecov to find the reports

* ci: try being more explicit about the coverage report location

* ci: go back to running from atom folder

* cis: do not upload wheels or create release on scheduled jobs

* cis: allow to manually run the release workflow for test purposes

* cis: try to fix wheel location for uploading action to actually find them

* cis: fix target of cibuildwheel

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration
 on:
   schedule:
-    - cron: '0 0 * * 2'
+    - cron: '0 0 * * 3'
   push:
     branches:
       - master
@@ -41,7 +41,7 @@ jobs:
         if: matrix.python-version == '3.6'
         run: |
           pip install pytest-cov
-          python -m pytest tests --cov atom --cov-report xml -vs
+          python -m pytest tests --cov atom --cov-report xml -v
       - name: Test with pytest
         if: matrix.python-version != '3.6'
         run: |
@@ -52,7 +52,6 @@ jobs:
         if: matrix.os == 'windows-latest'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
