--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,4 +112,4 @@ jobs:
           user: __token__
           password: ${{ secrets.pypi_password }}
           # To test:
-          repository_url: https://test.pypi.org/legacy/
+          # repository_url: https://test.pypi.org/legacy/
