--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,10 @@ on:
     - cron: '0 0 * * 3'
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - .github/workflows/ci.yml
       - atom/*
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/master
+          pip install https://github.com/nucleic/cppy/tarball/main
       - name: Install project
         env:
           CPPFLAGS: --coverage
