--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,10 +4,10 @@ on:
     - cron: '0 0 * * 2'
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - .github/workflows/docs.yml
       - atom/*
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/master
+          pip install https://github.com/nucleic/cppy/tarball/main
       - name: Install project
         run: |
           python setup.py develop
