typing: use generic aliases and the pipe operator rather than Union
Using generic aliases means we prefer list[int] over typing.List[int]. Note that we gave up typing dictionary default values which has a prohibitive cost for little use.

--- a/tests/typing/test_dict.yml
+++ b/tests/typing/test_dict.yml
@@ -74,7 +74,7 @@
     member_instance: Dict(value=Int())
     member_type: atom.dict.Dict[Any, builtins.int]
     member_value_type: builtins.dict*[Any, builtins.int*]
-  # Typed key ad value
+  # Typed key and value
   #   simple type as key
   - member: Dict
     member_instance: Dict(int, int)
