--- a/tests/typing/test_event.yml
+++ b/tests/typing/test_event.yml
@@ -1,3 +1,10 @@
+#------------------------------------------------------------------------------
+# Copyright (c) 2021, Nucleic Development Team.
+#
+# Distributed under the terms of the Modified BSD License.
+#
+# The full license is in the file LICENSE, distributed with this software.
+#------------------------------------------------------------------------------
 - case: event
   parametrized:
   - member: Event
