--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
     name: Type checking
     runs-on: ubuntu-latest
     strategy:
+      matrix:
         python-version: ['3.8', '3.9']
     steps:
       - uses: actions/checkout@v2
