--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest-cov
-          python -X dev -W error -m pytest tests --ignore=tests/typing --cov-report xml -v
+          python -X dev -W error -m pytest tests --ignore=tests/typing --cov --cov-report xml -v
       - name: Generate C++ coverage reports
         if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
         run: |
