members: allow Optional[] in container members

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run Mypy
         run: |
           pip install mypy pytest
-          mypy atom tests
+          mypy atom
       - name: Test with pytest
         run: |
           pip install pytest-mypy-plugins regex
